--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,6 +214,9 @@ ul {
 */
 .navbar {
   padding: 0;
+  position: fixed;
+  right: 10%;
+  top: 4%;
 }
 
 .navbar ul {
@@ -226,6 +229,7 @@ ul {
 
 .navbar li {
   position: relative;
+
 }
 
 .navbar a {
@@ -438,7 +442,7 @@ ul {
 --------------------------------------------------------------*/
 .hero {
   width: 100%;
-  height: 100vh;
+  height: 70vh;
   background: url(../img/header.png) top center no-repeat;
   background-size: cover;
 }
@@ -542,7 +546,7 @@ ul {
 --------------------------------------------------------------*/
 .about .content {
   background-color: #f6f9ff;
-  padding: 40px;
+  /* padding: 40px; */
 }
 
 .about h3 {
